[package]
name = "ethe-rs"
version = "0.1.0"
edition = "2018"
 
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "processthreadsapi",
    "memoryapi",
    "winnt",
    "tlhelp32",
    "handleapi",
    "sysinfoapi",
    "psapi",
    "errhandlingapi",
] }
win-overlay = {path = "../Crates/win-overlay"}
lazy_static = "1.4.0"
